View Issue Details

IDProjectCategoryView StatusLast Update
0030280Open CASCADEOCCT:Data Exchangepublic2018-10-28 16:13
ReportersklAssigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030280: Data Exchange - broken VRML output due to unescaped symbols starting comment block
DescriptionResult after writing model from attached file (vmt02.xbf) to VRML is invalid.
Message after importing recorded file:
 ++ VRML Error: VrmlFormatError in line 11
Steps To Reproducepload XDE
XOpen vmt02.xbf D
WriteVrml D vmt02r.wrl
loadvrml a vmt02r.wrl
TagsNo tags attached.
Test case numberbugs xde bug30280

Attached Files

  • vmt02.xbf (73,580 bytes)

Activities

skl

2018-10-23 07:41

developer  

vmt02.xbf (73,580 bytes)

git

2018-10-23 07:52

administrator   ~0080212

Branch CR30280 has been created by skl.

SHA-1: 2d26fba86a0271183b540b72f898453917fba31c


Detailed log of new commits:

Author: skl
Date: Tue Oct 23 07:50:33 2018 +0300

    0030280: Invalid writing of VRML file.

skl

2018-10-23 11:07

developer   ~0080218

Branch CR30280 is ready to be reviewed.

Result of tests:
http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30280-master-SKL/view/COMPARE/

gka

2018-10-23 12:01

developer   ~0080225

Please add replacing blanks in the names of the groups on the symbol "underscore" as it was made for name of the faces (line 652)

git

2018-10-23 12:06

administrator   ~0080226

Branch CR30280 has been updated forcibly by skl.

SHA-1: 6e6dba0bc181aefafc909c5e747fa80d9ce87805

skl

2018-10-23 14:31

developer   ~0080230

Protection against blanks in the names is added.
Branch CR30280 is ready to be reviewed.

Result of tests:
http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30280-master-SKL/view/COMPARE/

gka

2018-10-23 17:48

developer   ~0080238

Branch CR30280 was reviewed

git

2018-10-23 18:53

administrator   ~0080241

Branch CR30280 has been updated by apn.

SHA-1: ae5b6d1b28151169a8be259fe17c071b7539c798


Detailed log of new commits:

Author: apn
Date: Tue Oct 23 18:52:32 2018 +0300

    # Add test case bugs/xde/bug30280

apn

2018-10-23 19:56

administrator   ~0080243

Combination -
OCCT branch : CR30280 SHA - 6e6dba0bc181aefafc909c5e747fa80d9ce87805
Products branch : master SHA - 35af85def09c66ceeaf90b4e4fb8b54e68d5e98c
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

Test case:
bugs xde bug30280 - OK

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17647.719999999736 / 17520.90999999988 [+0.72%]
Products
Total CPU difference: 7437.790000000051 / 7462.09000000004 [-0.33%]
Windows-64-VC14:
OCCT
Total CPU difference: 17655.36637469864 / 17666.582846598394 [-0.06%]
Products
Total CPU difference: 8364.134015899985 / 8372.402068899986 [-0.10%]

Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2018-10-28 16:13

administrator   ~0080413

Branch CR30280 has been deleted by inv.

SHA-1: ae5b6d1b28151169a8be259fe17c071b7539c798

Related Changesets

occt: master 5ada54fb

2018-10-23 04:50:33

skl


Committer: apn Details Diff
0030280: Data Exchange - broken VRML output due to unescaped symbols starting comment block Affected Issues
0030280
mod - src/VrmlData/VrmlData_ShapeConvert.cxx Diff File
add - tests/bugs/xde/bug30280 Diff File

Issue History

Date Modified Username Field Change
2018-10-23 07:41 skl New Issue
2018-10-23 07:41 skl Assigned To => gka
2018-10-23 07:41 skl File Added: vmt02.xbf
2018-10-23 07:52 git Note Added: 0080212
2018-10-23 07:57 kgv Summary Invalid writing of VRML file. => Data Exchange - broken VRML output due to unescaped symbols starting comment block
2018-10-23 11:07 skl Note Added: 0080218
2018-10-23 11:08 skl Status new => resolved
2018-10-23 12:01 gka Note Added: 0080225
2018-10-23 12:01 gka Assigned To gka => skl
2018-10-23 12:01 gka Status resolved => assigned
2018-10-23 12:06 git Note Added: 0080226
2018-10-23 14:31 skl Note Added: 0080230
2018-10-23 14:32 skl Assigned To skl => gka
2018-10-23 14:32 skl Status assigned => resolved
2018-10-23 17:48 gka Note Added: 0080238
2018-10-23 17:48 gka Assigned To gka => bugmaster
2018-10-23 17:48 gka Status resolved => reviewed
2018-10-23 18:53 git Note Added: 0080241
2018-10-23 19:56 apn Test case number => bugs xde bug30280
2018-10-23 19:56 apn Note Added: 0080243
2018-10-23 19:56 apn Status reviewed => tested
2018-10-28 13:20 apn Changeset attached => occt master 5ada54fb
2018-10-28 13:20 apn Assigned To bugmaster => apn
2018-10-28 13:20 apn Status tested => verified
2018-10-28 13:20 apn Resolution open => fixed
2018-10-28 16:13 git Note Added: 0080413