0030280: Data Exchange - broken VRML output due to unescaped symbols starting comment block